# crud_flask

./: .gitignore  README.md  app.py  makefile  pyproject.toml  requirements.txt  settings.toml
crud_flask/: __init__.py
crud_flask/forms/: user_form.py
crud_flask/models/: user_.py
crud_flask/static/css/: messages.css  styles.css
crud_flask/templates/: base.html
crud_flask/templates/crud/: create.html  detail.html  index.html  update.html
crud_flask/templates/partials/: _head.html  _messages.html  _navbar.html
crud_flask/views/: create_user.py  delete_user.py  detail_user.py  home.py  update_user.py
