[tool.poetry]
name = "crud-flask"
version = "0.1.0"
description = ""
authors = ["Igor Marques <engenheirostrauss2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
dynaconf = "^3.2.5"
flask-wtf = "^1.2.1"
email-validator = "^2.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
